feat(api): support petal mode and max views
