# packages/contract/openapi.yaml
@@ -12,17 +12,23 @@ paths:
           application/json:
             schema:
               type: object
-              required:
-                - url
               properties:
                 url:
                   type: string
+                  nullable: true
                 note:
+                  type: string
+                  nullable: true
+                text:
                   type: string
                   nullable: true
                 ttl:
                   type: string
                   example: "7d"
+                burn:
+                  type: boolean
+                max_views:
+                  type: integer
       responses:
         "200":
           description: Created
@@ -35,6 +41,7 @@ paths:
                     type: string
                   original:
                     type: string
+                    nullable: true
                   note:
                     type: string
                     nullable: true
@@ -60,6 +67,7 @@ paths:
                 properties:
                   url:
                     type: string
+                    nullable: true
                   note:
                     type: string
                     nullable: true
